[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/menu/forest.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/menu/fonte_botoes.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ui/menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/fonte_opt.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/menu/fonte_labels.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://scenes/menu/titulo.TTF"

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = SubResource( 2 )

[node name="MenuRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
opt_dificuldade_path = NodePath("div_menu/opt_dificuldade")
opt_tempo_path = NodePath("div_menu/opt_tempo")
control_div_menu = NodePath("div_menu")
control_div_gameover = NodePath("div_gameover")

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.283
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Arte de Acampar"
align = 1
valign = 1
autowrap = true

[node name="div_menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.293
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0
margin_bottom = -10.0

[node name="ColorRect" type="ColorRect" parent="div_menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Button" type="Button" parent="div_menu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -41.0
custom_fonts/font = ExtResource( 2 )
text = "Iniciar partida"

[node name="opt_dificuldade" type="OptionButton" parent="div_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 32.0
margin_right = 200.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 144, 32 )
custom_fonts/font = ExtResource( 4 )
text = "Aspirante"

[node name="Label" type="Label" parent="div_menu/opt_dificuldade"]
anchor_right = 1.0
margin_left = 1.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 5 )
text = "Dificuldade:"

[node name="opt_tempo" type="OptionButton" parent="div_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 128.0
margin_right = 200.0
margin_bottom = 177.0
rect_pivot_offset = Vector2( 144, 32 )
custom_fonts/font = ExtResource( 4 )
text = "30 minutos"

[node name="Label" type="Label" parent="div_menu/opt_tempo"]
anchor_right = 1.0
margin_left = -1.0
margin_top = -38.0
margin_right = -1.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 5 )
text = "Tempo de jogo:"

[node name="div_gameover" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -336.0
margin_right = 200.0
margin_bottom = -64.0

[node name="ColorRect" type="ColorRect" parent="div_gameover"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Button" type="Button" parent="div_gameover"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -41.0
custom_fonts/font = ExtResource( 2 )
text = "Voltar ao menu"

[node name="Label" type="Label" parent="div_gameover"]
anchor_top = 0.358
anchor_right = 1.0
anchor_bottom = 0.594
margin_left = -4.0
margin_top = -13.0
margin_right = -4.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 5 )
text = "Game Over!!!!"
align = 1
valign = 1

[connection signal="pressed" from="div_menu/Button" to="." method="pressionou_botao_play"]
[connection signal="pressed" from="div_gameover/Button" to="." method="pressinou_botao_voltar_ao_menu"]
